--- a/styles/resp.css
+++ b/styles/resp.css
@@ -64,7 +64,7 @@
  }
 
 .wrapper {
-    max-width: 800px;
+    max-width: 960px;
     margin: auto;
     display: grid;
     grid-template-rows: auto;
@@ -106,11 +106,12 @@
 .foot {
     grid-area: foot;
     background-color: orange;
-    text-align: center;    
+    text-align: center;  
+    padding-bottom: 3em;
 }
 
 /*large screen settings below*/
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 800px) {
     .wrapper {
         display: grid;
         grid-template-columns: 1fr 2fr;
