--- a/styles/style.css
+++ b/styles/style.css
@@ -1,66 +1,173 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-
 }
+ 
+body {
+     background-color: oldlace;
 
-body{
-    background-color: white;
-}
+ }
 
-@media screen and (max-width: 600px) {
-    .container {
+ul {
+     list-style: none;
+     background-color: darkorchid;
+     padding: .75em 0;
     
-        display: inline;
-        background-color: mediumaquamarine;
-        clear: both;
     }
+
+h1 {
+     margin: .5em 0;
+     padding:.5em;
+     background-color: orchid;
+     color: darkred;
+     font-family: 'Montserrat', sans-serif;
+ }
+
+h3 {
+   
+     padding:.5em;
+     background-color: orchid;
+     color: palegoldenrod;
+     font-family: 'Montserrat', sans-serif;
+
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Nova Mono', monospace;
-    color: darkmagenta;
+ p {
+     margin-left: 0;
+     text-align: left;
+     margin-right: 2em;
+     padding-bottom: 2em;
+     font-family: 'Work Sans', sans-serif;
+}
 
+.copy {
+    color: darkred
+}
+
+ img {
+     width: 100%;
+     height: auto;
 }
 
 
-p {
-    font-family: 'Anonymous Pro', monospace;
-}
+a {
+     text-align: center;
+     text-decoration: none; 
+     color:palegoldenrod;
+     font-family: 'Work Sans', sans-serif;
+     
+    }
 
-.container {
+ .a1 {
+     
+     padding: .5em;
+     color: palegoldenrod;
+     font-size: x-large;
+     font-family: 'Work Sans', sans-serif;
+ }
+
+ .a1:hover {
+     color: darkred;    
+ }
+
+ a:hover {
+     color: darkred;
+ }
+
+ .a2 {
+     color: darkred;
+ }
+
+ .a2:hover {
+     color: palegoldenrod;
+ }
+
+ .a3 {
+     line-height: 1.5em;
+ }
+
+.wrapper {
+    max-width: 960px;
+    margin: auto;
     display: grid;
-    grid-template-columns: 25vw 1fr 1fr;
-    grid-template-rows: 20vh 30vh 30vh 20vh;
+    grid-template-rows: auto;
     grid-template-areas: 
-      "side head head"
-      "side main main"
-      "side main main"
-      "side foot foot";
-      
+       "head"
+       "side"
+       "nav"
+       "main"
+       "foot";
+    padding-left: .5em;
+    padding-right: .5em;
+    text-align: center;    
 }
+
 
 .head {
     grid-area: head;
-}
-
-.nav {
-    grid-area: head;
+    background-color: orange;
+    padding: 1.5em 0;
 }
 
 .side {
     grid-area: side;
-    margin-right: 2vw;
-    background-color: magenta;
+    background-color: orange;
+    padding: .75em 0;
+}
+
+.nav {
+    display: inline-block;
+    background-color: darkorchid;
+    padding: .75em 0;
 }
 
 .main {
     grid-area: main;
-    margin-left: 2vw;
+    background-color: orchid;
+    padding: 1.5em;    
 }
 
 .foot {
     grid-area: foot;
-    color: darkmagenta;
+    background-color: orange;
+    text-align: center;  
+    padding-bottom: 3em;
 }
+
+/*large screen settings below*/
+@media screen and (min-width: 800px) {
+    .wrapper {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        grid-template-rows: auto;
+        grid-template-areas: 
+          "side head"
+          "nav nav"
+          "main main"
+          "foot foot";
+    }
+
+    .main {
+      grid-template-columns: 1.5fr 1fr;
+      display: grid;
+    }
+
+    img {
+      width: 100%;
+      height: auto;
+      padding-right: 0;
+    }
+
+    .nav {
+        font-family: 'Work Sans', sans-serif;
+        display: inline;
+        grid-area: nav;
+    }
+
+    h1 {
+        background-color: orange;
+    }
+    
+}
+
+/*large screen settings above*/
